--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ private static void androidX(configuration) {
     configuration.implementation 'com.google.android.material:material:1.3.0'
     configuration.implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     configuration.implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    configuration.implementation("androidx.activity:activity-ktx:1.2.3")
 }
 
 private static void kotlinX(configuration) {
